# WebGpu

./: .gitignore  .tool-versions  Caddyfile  Readme.md  access.log.json
2d_map/: index.html  package-lock.json  package.json
2dwavefunction/: bun.lockb  index.html  package.json
Celebi/: README.md  pyproject.toml
Celebi/example/: Anim.blend  Voxel.blend  Voxel.blend1  Voxel.glb  library.celebi  library.json
Celebi/src/: __init__.py  box.py  celebi.py  gizmo.py  help.py  library.py  panel_test.py  preview.py  save.py  type.py  type_test.py  voxel.py  voxel_hash.py
FPSHorrorGDScript/: icon.png.import  project.godot
GalaxyBuilder/: bun.lockb  index.html  package.json
Godot-Water-Ripple-Simulation-Shader/: main.gd  main.tscn
Godot_4_Hack_and_Slash/: main_scene.tscn  project.godot
JoltPhysics.js/: CMakeCache.txt  bun.lockb  package.json
LevelGen/: Readme.md  build.zig.zon
adjusted-ik-3d-demo/: project.godot
adventure-island/: bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
adventure_island/: bun.lockb  package.json
apple_container_ui/: Images.html  NewDashboard.html
batman-combat/: batman.tscn  character_controller.gd  character_controller.gd.uid  combat_script.gd  combat_script.gd.uid  enemy_detection.gd  enemy_detection.gd.uid  enemy_manager.gd  enemy_manager.gd.uid  enemy_script.gd  enemy_script.gd.uid  icon.svg.import  project.godot  world.tscn
galaxy/: bun.lockb  package.json
gdquest-character/: game.tscn  new_scene.tscn  new_script.gd  new_script.gd.uid
gdzig/: .gitignore  CLAUDE.md
gdzig_example/: build.zig.zon
(+1600 files in other folders)
